--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "firewith-app": {
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "firewith-app"
+    }
+  },
+  "defaultProject": "firewith-app",
+  "cli": {
+    "analytics": "767afb97-2c05-457e-afe5-bb4604b023fb"
+  }
 }
